# sdl_pro

./: CMakeLists.txt
cmake/: FindCatch2.cmake  FindFakeIt.cmake  FindSDL2.cmake
include/: example_2_application_context.hh  example_3_events.hh  getting_an_image_on_the_screen.hh  print.hh
src/: CMakeLists.txt  example_2_application_context.cc  example_3_events.cc  getting_an_image_on_the_screen.cc  main.cc
tests/: CMakeLists.txt  tests_main.cc
